--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+p,
+span {
+    font-size: 18px;
+}
 .App-body {
     background-color: #282c34;
     min-height: 100vh;
@@ -10,6 +14,7 @@
 
     header {
         text-align: center;
+        margin-bottom: 60px;
     }
 }
 
