--- a/src/components/DictList/DictList.scss
+++ b/src/components/DictList/DictList.scss
@@ -2,13 +2,21 @@
     display: flex;
     padding-bottom: 20px;
     justify-content: space-between;
+    height: 40px;
     .search-field {
         width: 25em;
         label {
             color: #fafafa;
+            &:not(.Mui-focused) {
+                margin-top: -7px;
+                font-size: 13px;
+            }
         }
         input {
             color: white;
+        }
+        .MuiOutlinedInput-root {
+            height: 100%;
         }
         .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
             border-color: #fafafa;
@@ -20,6 +28,9 @@
     button {
         border-color: #fafafa;
         color: #fafafa;
+        .MuiButton-label {
+            font-size: 12px;
+        }
     }
 }
 
@@ -50,6 +61,26 @@
         }
         a {
             text-decoration: none;
+        }
+        .label {
+            font-size: 11px;
+            border: 1px solid #ccc;
+            padding: 2px 10px;
+            color: #666;
+            text-transform: uppercase;
+            margin-right: 10px;
+        }
+    }
+}
+
+.modal {
+    .form-container {
+        width: 100%;
+        .MuiFormControl-root {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            margin-bottom: 20px;
         }
     }
 }
